# aapokerhands

./: .gitignore  .gitmodules  .travis.yml  .version  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  VERSION  aa-pokerhands.c  aa-pokerhands.geany  aapokerhands.c  aclocal.m4  configure  configure.ac  example_output01.txt  meson.build  meson_options.txt
.github/workflows/: build.yml  c-cpp.yml  linux.yml  macos.yml  windows.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  aa-pokerhands.c  aa-pokerhands.h  aapokerhands.c  client.c  client.h  functions.c  functions.h  game.c  game.h  globals.h  graphics.c  graphics.h  lib.c  lib.h  main.c  main.h  meson.build  net.c  net.h  netpoker.c  netpoker.h  netpoker.pb-c.c  netpoker.pb-c.h  netpoker.proto  netpoker_client.c  netpoker_server.c  server.c  server.h  types.h
src/protobuf/: netpoker.pb-c.c  netpoker.pb-c.h
subprojects/: deckhandler.wrap  pokeval.wrap
tests/: meson.build
