AC_INIT([pokerhands], [m4_esyscmd_s([cat ./.version])], [andy400-dev@yahoo.com],
      , ['https://github.com/theimpossibleastronaut/aa-pokerhands'])
AM_INIT_AUTOMAKE
AC_PREREQ(2.69)
AC_CONFIG_HEADERS([src/config.h:config.in])
AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
                src/Makefile])
AC_OUTPUT
