option('gen_protobuf', type : 'boolean', value : false,
       description : 'Generate protobuf c source')
option('build_netpoker', type : 'boolean', value : false,
       description : 'Build Net Poker')
#option('docdir', type : 'string', value : 'share/doc/pokerhands',
#       description : 'directory where the documentation should be installed to')
